# notSofiaRtspServer

./: .gitignore  .gitmodules  CMakeLists.txt
src/: Application.cpp  Application.h  Board.cpp  Board.h  NotSofiaMediaSource.cpp  NotSofiaMediaSource.h  main.cpp
src/Alarm/: AlarmSession.cpp  AlarmSession.h  MotionBroadcast.h
src/NotSofiaSource/: H264ToRtpConverter.cpp  H264ToRtpConverter.h  MediaSource.cpp  MediaSource.h
